plogapp/tests/errors/rangeSort.plog
sorts

#s = 2..1.

attributes

statements

